fix z-index block links

--- a/public/sass/components/_dropdown.scss
+++ b/public/sass/components/_dropdown.scss
@@ -45,6 +45,7 @@
     }
     & .block-links {
       position: absolute;
+      z-index: 10;
       // max-height: 30%;
       transition: height 0.3s ease-in-out;
       display: none;
